修改 swagger 路由
