# routes/users.route.js
@@ -29,11 +29,61 @@ router.get(
 )
 
 // 取得使用者資料
+/**
+ * @swagger
+ * /api/v1/users/info:
+ *   get:
+ *     summary: 取得使用者資料
+ *     tags:
+ *       - Users
+ *     security:
+ *       - BearerAuth: []
+ *     responses:
+ *       200:
+ *         description: 成功取得使用者資料
+ *       401:
+ *         description: 權限不足
+ *       404:
+ *         description: 查無個人資料，請重新登入
+ */
 router.get('/info', ...handleMiddleware([isAuth], userController.getUserData))
+
 // 驗證使用者是否登入
+/**
+ * @swagger
+ * /api/v1/users/check:
+ *   get:
+ *     summary: 驗證使用者是否登入
+ *     tags:
+ *       - Users
+ *     security:
+ *       - BearerAuth: []
+ *     responses:
+ *       200:
+ *         description: 驗證成功
+ *       401:
+ *         description: 驗證錯誤，token 無效或是不存在
+ */
 router.get('/check', ...handleMiddleware([isAuth], userController.getCheck))
 
 //更新使用者資料
+/**
+ * @swagger
+ * /api/v1/users/update:
+ *   get:
+ *     summary: 編輯使用者資料
+ *     tags:
+ *       - Users
+ *     security:
+ *       - BearerAuth: []
+ *     responses:
+ *       200:
+ *         description: 成功更新使用者資料
+ *       400:
+ *         description: 更新失敗，請稍後再試
+ *       404:
+ *         description: 查無個人資料，請重新登入 
+ */
 router.patch(
   '/update',
   ...handleMiddleware([upload.single('file'), isAuth, validateSchema(updateUserSchema), userController.updateUserData])
